[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkid"
version = "1.0.0"
description = "Python client for the CheckID compliance registry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SelvageLabs" }]
keywords = ["security", "compliance", "checkid", "nist", "cis", "hipaa", "soc2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/SelvageLabs/CheckID"
Repository = "https://github.com/SelvageLabs/CheckID"

[tool.setuptools.packages.find]
where = ["."]
include = ["checkid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
